Auto-wrap on resize fixed, woohoo!

--- a/gist-api/style-ace.css
+++ b/gist-api/style-ace.css
@@ -14,12 +14,9 @@
 }
 
 #resizable { 
-    min-width: 500px; 
-    min-height: 500px;
+    position: absolute;
     width: 500px;
     height: 500px;
-    max-width: 700px; 
-    max-height: 600px; 
     padding: 5px; 
     border: 3px solid red; 
 }
